Finished section on Patterns

--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -1278,12 +1278,8 @@ use. We give a means to remove a place from a pattern, replacing it with
 a trivial atom. Similarly we extend the same functionality to environments.
 We  also define the usual spattering of openings and various other machinery
 we have already covered, using the naming conventions discussed so they are
-to be recognizable.
-
-We also define some openings and a method for retrieving a term from a pattern
-and some opening of its environment. We are unable to use our previously defined
-Openable for schematic variables as the type is a little difference due to it
-having a pattern index which also needs to be opened in the return type.
+to be recognizable. In addition we provde here the type of the function that
+produces an actual term from some pattern together with some environment.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}-\AgdaUnderscore{}}}%
@@ -1891,16 +1887,23 @@ having a pattern index which also needs to be opened in the return type.
 \end{code}
 }
 
-In a minor spoiler of things to come, we also introduce the concept here of an
+In a minor spoiler of things to come, we introduce the concept of an
 svar-builder. We will later find it useful to traverse a pattern and build a
 potential svar on the way down so that when we get to a $place$ we have the svar
-that refers to it. 
+that refers to it.
 
-\begin{code}%
-\>[0]\<%
-\end{code}
+The notion is that instead of encoding some path to a $place$ in the pattern,
+we instead encode some path between the pattern $p$ and some subpattern $q$. 
+$X$ encode an empty path between a pattern and itself, then we
+may extend it, say with "\_∙" or "∙\_" so that we now show the path between
+a pair, and one of the elements of that pair. We can continue in a similar fashion,
+building some path, and if we are lucky enough to have it end in a $place$, then
+we know we might convert it to the appropriate svar. This is normally used by
+selecting both $p$ and $q$ to be the pattern we are about to traverse, then 
+using the combinators as we traverse it to strip constructors off q while
+simultaniously encode that stripped constructor in the path being constructed.
 
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{private}\<%
 \\
@@ -1913,13 +1916,30 @@ that refers to it.
 \AgdaDatatype{Bool}\<%
 \\
 %
-\>[4]\AgdaGeneralizable{p'}\AgdaSpace{}%
+\>[4]\AgdaGeneralizable{lf}\AgdaSpace{}%
+\AgdaGeneralizable{rt}\AgdaSpace{}%
+\AgdaGeneralizable{p'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
 \AgdaGeneralizable{δ'}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
+\>[4]\AgdaGeneralizable{bn}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Pattern}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaGeneralizable{δ'}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{θ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
+\AgdaGeneralizable{γ'}\<%
+\end{code}
+}
+
+\begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{svar-builder}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1976,33 +1996,27 @@ that refers to it.
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaGeneralizable{p'}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+
+The combinators are fairly trivial but there types are important in showing
+how we creating some distance between patterns in which we are charting some
+path, by structurally reducing the second pattern in the type, but encoding
+that information in the svar-builder we are creating so we remember exactly
+how it was deconstructed. We give the first combinator in full here as an example,
+and the types of the other two.
+
+\begin{code}%
 \>[0]\AgdaFunction{⇚}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[1312I]\AgdaSymbol{∀\{}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{\}\{}\AgdaBound{s}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{δ'}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[1312I]%
-\>[4]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{lf}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-%
-\>[4]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{s}\<%
+\AgdaGeneralizable{rt}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{lf}\<%
 \\
 \>[0]\AgdaFunction{⇚}\AgdaSpace{}%
 \AgdaInductiveConstructor{X}%
@@ -2038,30 +2052,30 @@ that refers to it.
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{⇛}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[1343I]\AgdaSymbol{∀\{}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{\}\{}\AgdaBound{s}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{δ'}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[1343I]%
-\>[4]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{lf}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
+\AgdaGeneralizable{rt}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{rt}\<%
 \\
-%
-\>[4]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{t}\<%
-\\
+\>[0]\AgdaFunction{↳}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaGeneralizable{bn}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{bn}\<%
+\end{code}
+\hide{
+\begin{code}%
 \>[0]\AgdaFunction{⇛}\AgdaSpace{}%
 \AgdaInductiveConstructor{X}%
 \>[13]\AgdaSymbol{=}%
@@ -2095,30 +2109,6 @@ that refers to it.
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{↳}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[1373I]\AgdaSymbol{∀\{}\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{\}\{}\AgdaBound{t}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaGeneralizable{δ'}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[1373I]%
-\>[4]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-%
-\>[4]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{t}\<%
-\\
-\>[0]\AgdaFunction{↳}\AgdaSpace{}%
 \AgdaInductiveConstructor{X}%
 \>[13]\AgdaSymbol{=}%
 \>[16]\AgdaInductiveConstructor{bind}\AgdaSpace{}%
@@ -2147,32 +2137,32 @@ that refers to it.
 \>[16]\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{↳}\AgdaSpace{}%
 \AgdaBound{v}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{build}%
-\>[1401I]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{θ}\AgdaSpace{}%
+\end{code}
+}
+
+Finally we are able to build and actual svar from a builder only if it shows
+the path in some pattern $p$ to some place in that pattern.
+
+\begin{code}%
+\>[0]\AgdaFunction{build}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[1391I]\AgdaSymbol{\{}\AgdaBound{θ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
 \AgdaGeneralizable{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[1401I][@{}l@{\AgdaIndent{0}}]%
-\>[7]\AgdaDatatype{svar-builder}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[1391I]%
+\>[8]\AgdaDatatype{svar-builder}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{place}\AgdaSpace{}%
 \AgdaBound{θ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
 %
-\>[7]\AgdaDatatype{svar}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
+\>[8]\AgdaDatatype{svar}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\<%
 \\
 \>[0]\AgdaFunction{build}\AgdaSpace{}%
@@ -2203,9 +2193,10 @@ that refers to it.
 \AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{build}\AgdaSpace{}%
 \AgdaBound{v}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaFunction{bind-count-bl}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{svar-builder}\AgdaSpace{}%
