Fixed up unicode file to include arrows.

--- a/report/unicode.tex
+++ b/report/unicode.tex
@@ -88,6 +88,9 @@
 \newunicodechar{←}{\ensuremath{\leftarrow}}
 \newunicodechar{⇒}{\ensuremath{\Rightarrow}}
 \newunicodechar{⇉}{\ensuremath{\rightrightarrows}}
+\newunicodechar{⇛}{\ensuremath{\Rrightarrow}}
+\newunicodechar{⇚}{\ensuremath{\Lleftarrow}}
+\newunicodechar{↳}{\rotatebox[origin=c]{180}{$\Lsh$}}
 
 % Mathematical symbols
 \newunicodechar{∂}{\ensuremath{\partial}}
