--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -67,7 +67,9 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{BwdVec}\<%
+\AgdaModule{BwdVec}\AgdaSpace{}%
+\AgdaKeyword{hiding}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{map}\AgdaSymbol{)}\<%
 \end{code}
 }
 
@@ -100,6 +102,12 @@
 \AgdaGeneralizable{γ}\<%
 \\
 %
+\>[4]\AgdaGeneralizable{q}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Pattern}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\<%
+\\
+%
 \>[4]\AgdaGeneralizable{γ'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\<%
@@ -117,17 +125,16 @@
 }
 
 Expressions allow us to define a way that we might construct a term from a
-pattern. In the context of a conclusion of a typing rule, where a pattern
-might match and sculpt out component parts of an input or subject,
-expressions allow us to define an output in terms in terms of these component
-parts. In a premise, it allows us to build an input in terms of the
-conclusion and the output of all previous premise.
+pattern that represents something that we trust. For example, if the expression
+is showing how one might build the required term as the output of some
+type-synthesis rule for elimination, what is trusted might be the type of the
+target and whatever we learn to trust in the premises. These trusted patterns
+contain places that sculpt out component parts in a piece of matched syntax
+and allow us to use these component parts in constructing a new term.
 
 It mirrors the structure of our terms except that it includes the option
-to instantiate a place in a pattern with some substitution of term variables
-that it may depend on. When we are using an expression after matching against
-the appropriate pattern and gaining an environment for it, this gives us the
-necessary information to build a term.
+to reference some place in a pattern and instantiate it with some substitution
+of its free  variables.
 
 \begin{code}%
 \>[0]\AgdaFunction{Expr}\AgdaSpace{}%
@@ -229,9 +236,8 @@ necessary information to build a term.
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaGeneralizable{γ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaDatatype{Com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -309,11 +315,14 @@ necessary information to build a term.
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \end{code}
-
-As is expected by now, we define various functions allowing us to thin,
-weaken and open expressions and substitutions thereof for later use.
-
+As is expected by now, we omit the usual smattering of thinnings, weakenings
+and openings.
+\hide{
 \begin{code}%
+\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
+\AgdaNumber{20}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}\<%
+\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
@@ -321,52 +330,6 @@ weaken and open expressions and substitutions thereof for later use.
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}exp}}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}/exp}}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
-\end{code}
-
-\hide{
-\begin{code}%
-\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
-\AgdaNumber{20}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -530,8 +493,13 @@ weaken and open expressions and substitutions thereof for later use.
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-%
-\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}exp}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}exp}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -550,6 +518,16 @@ weaken and open expressions and substitutions thereof for later use.
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}/exp}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}/exp}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -607,14 +585,34 @@ weaken and open expressions and substitutions thereof for later use.
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
+\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗sub\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[383I]\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\>[387I]\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[383I]%
+\>[.][@{}l@{}]\<[387I]%
 \>[9]\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaFunction{Expr}\AgdaSpace{}%
@@ -638,47 +636,6 @@ weaken and open expressions and substitutions thereof for later use.
 \AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗sub\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{⟨sub}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{idexpr}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{δ'}\AgdaSymbol{\})}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -799,6 +756,257 @@ weaken and open expressions and substitutions thereof for later use.
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗sub\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{⟨sub}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{idexpr}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{δ'}\AgdaSymbol{\})}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
+\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨esub\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨esub\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{⟨sub}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{svar}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{svar}\AgdaSpace{}%
+\AgdaGeneralizable{q}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ'}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{q}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ'}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{t}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{q}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{q}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{ξ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{/}}\AgdaSpace{}%
+\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{ξ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{/}}\AgdaSpace{}%
+\AgdaFunction{mapself}\AgdaSpace{}%
+\AgdaBound{σ}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{where}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaComment{-- inline to shut up termination checker}\<%
+\\
+%
+\>[4]\AgdaFunction{mapself}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{BwdVec}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Com}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaGeneralizable{γ'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{BwdVec}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Com}\AgdaSpace{}%
+\AgdaBound{q}\AgdaSpace{}%
+\AgdaGeneralizable{γ'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{n}\<%
+\\
+%
+\>[4]\AgdaFunction{mapself}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\<%
+\\
+%
+\>[4]\AgdaFunction{mapself}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{xs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{mapself}\AgdaSpace{}%
+\AgdaBound{xs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{T}\<%
 \end{code}
 }
 
@@ -845,7 +1053,7 @@ how it is that we process our svar instantiations
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[561I]\AgdaKeyword{let}\AgdaSpace{}%
+\>[730I]\AgdaKeyword{let}\AgdaSpace{}%
 \AgdaBound{σ'}%
 \>[15]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{map-toTerm}\AgdaSpace{}%
@@ -853,7 +1061,7 @@ how it is that we process our svar instantiations
 \AgdaBound{penv}%
 \>[36]\AgdaKeyword{in}\<%
 \\
-\>[.][@{}l@{}]\<[561I]%
+\>[.][@{}l@{}]\<[730I]%
 \>[4]\AgdaKeyword{let}\AgdaSpace{}%
 \AgdaBound{id-fv}%
 \>[15]\AgdaSymbol{=}\AgdaSpace{}%
@@ -1003,12 +1211,12 @@ affect any free variables that may exist.
 \AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{γ'}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[667I]\AgdaBound{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[836I]\AgdaBound{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\<%
 \\
-\>[667I][@{}l@{\AgdaIndent{0}}]%
+\>[836I][@{}l@{\AgdaIndent{0}}]%
 \>[35]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{var}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
